--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "com.google.accompanist:accompanist-permissions:0.18.0"
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
 
