--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "com.google.accompanist:accompanist-permissions:0.18.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.18.0"
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
